--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "rundev": "node app.js"
+    "rundev": "node index.js"
   },
   "author": "Tomas Aldea",
   "license": "MIT",
